# cis194

./: README.md  cis194.cabal
src/: JoinListEditor.hs
src/Cis194/Week1/: Assignment.hs  Lecture.hs
src/Cis194/Week10/: AParser.hs  Lecture.hs
src/Cis194/Week11/: Lecture.hs  SExpr.hs
src/Cis194/Week12/: Lecture.hs  Risk.hs
src/Cis194/Week2/: Assignment.hs  Lecture.hs  LogAnalysis.hs
src/Cis194/Week3/: Golf.hs  Lecture.hs
src/Cis194/Week4/: Assignment.hs  Lecture.hs
src/Cis194/Week5/: Calc.hs  Lecture.hs
src/Cis194/Week6/: Fibonacci.hs  Lecture.hs
src/Cis194/Week7/: JoinList.hs  Lecture.hs  Scrabble.hs
src/Cis194/Week8/: Lecture.hs  Party.hs
src/Cis194/Week9/: Lecture.hs
