name:                cis194
version:             0.1.0.0
synopsis:            A playground & HW assingments for Brent Yorgey's CIS 194
homepage:            https://github.com/gsnewmark/cis194
license:             Apache-2.0
license-file:        LICENSE
author:              Ivan Kryvoruchko
maintainer:          gildraug@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/gsnewmark/cis194.git

library
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8
  exposed-modules:     Cis194.Week1.Assignment
                       Cis194.Week1.Lecture
  default-language:    Haskell2010
